--- a/Service/app/src/main/res/layout/activity_signup_view.xml
+++ b/Service/app/src/main/res/layout/activity_signup_view.xml
@@ -66,8 +66,10 @@
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:layout_marginTop="20dp"
         android:text="@string/createaccount_signup"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editText10"
         app:layout_constraintStart_toStartOf="@+id/editText10"
         app:layout_constraintTop_toBottomOf="@+id/editText10" />
